--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.4",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0"
   },
