--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.4",
     "styled-components": "^5.3.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.22",
+    "@types/uuid": "^8.3.4",
     "typescript": "^4.4.2"
   },
   "scripts": {
