Adicionando @unform/core e @unform/web

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
     "axios": "^0.26.0",
     "miragejs": "^0.1.43",
     "polished": "^4.1.4",
