--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "axios": "^0.26.0",
+    "bootstrap": "^5.2.3",
     "miragejs": "^0.1.43",
     "polished": "^4.1.4",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
