--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-toastify": "^9.0.4",
     "styled-components": "^5.3.3",
     "uuid": "^8.3.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
